// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WidgetListItem /> should match to snapshot when props.isActiveMore === true 1`] = `
<ul
  className="WidgetListItem WidgetListItem__list-box"
>
  <li
    className="WidgetListItem__list WidgetListItem__list-name"
  />
  <li
    className="WidgetListItem__list WidgetListItem__list-url"
  >
    <button
      className="WidgetListItem__button"
      onClick={[Function]}
      type="button"
    />
  </li>
  <li
    className="WidgetListItem__list WidgetListItem__list-activated"
  >
    <ToggleButton
      checkedValue={null}
      isCheck={true}
      onToggle={[Function]}
      unCheckedValue={null}
      width={40}
    />
  </li>
  <li
    className="WidgetListItem__list WidgetListItem__list-always-top"
  >
    <button
      className="WidgetListItem__pin-button WidgetListItem__pin-button--active"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        className="WidgetListItem__pin WidgetListItem__pin--active"
        src={Object {}}
      />
      pin up
    </button>
  </li>
  <li
    className="WidgetListItem__list WidgetListItem__more"
  >
    <button
      className="WidgetListItem__pin-button"
      data-name="more-btn"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        src={Object {}}
      />
    </button>
  </li>
</ul>
`;

exports[`<WidgetListItem /> should match to snapshot when render default 1`] = `
<ul
  className="WidgetListItem WidgetListItem__list-box"
>
  <li
    className="WidgetListItem__list WidgetListItem__list-name"
  />
  <li
    className="WidgetListItem__list WidgetListItem__list-url"
  >
    <button
      className="WidgetListItem__button"
      onClick={[Function]}
      type="button"
    />
  </li>
  <li
    className="WidgetListItem__list WidgetListItem__list-activated"
  >
    <ToggleButton
      checkedValue={null}
      isCheck={true}
      onToggle={[Function]}
      unCheckedValue={null}
      width={40}
    />
  </li>
  <li
    className="WidgetListItem__list WidgetListItem__list-always-top"
  >
    <button
      className="WidgetListItem__pin-button"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        className="WidgetListItem__pin"
        src={Object {}}
      />
      unpin
    </button>
  </li>
  <li
    className="WidgetListItem__list WidgetListItem__more"
  >
    <button
      className="WidgetListItem__pin-button"
      data-name="more-btn"
      onClick={[Function]}
      type="button"
    >
      <img
        alt=""
        src={Object {}}
      />
    </button>
  </li>
</ul>
`;
